--- a/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
@@ -1,17 +1,17 @@
-﻿<UserControl xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             x:Class="SecureIM.ChatGUI.UserControls.ChatMainControl"
+﻿<UserControl x:Class="SecureIM.ChatGUI.UserControls.ChatMainControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:tabClasses="clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
              xmlns:viewModel1="clr-namespace:SecureIM.ChatGUI.ViewModel"
+             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+             MinWidth="700"
+             MinHeight="500"
              d:DataContext="{d:DesignInstance tabClasses:TabChatMain}"
              d:DesignHeight="500"
              d:DesignWidth="700"
-             mc:Ignorable="d"
-             MinWidth="700"
-             MinHeight="500">
+             mc:Ignorable="d">
     <Grid MinWidth="700"
           MinHeight="500"
           UseLayoutRounding="True">
@@ -30,180 +30,185 @@
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
 
-        <Rectangle Margin="5,0"
-                   Width="699"
+
+        <Rectangle Grid.RowSpan="2"
                    Grid.ColumnSpan="3"
-                   Grid.Row="2"
+                   Width="699"
+                   Margin="5"
+                   Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
+                   UseLayoutRounding="True" />
+        <Button x:Name="BtnSetName"
+                Grid.Row="0"
+                Grid.Column="0"
+                Width="156"
+                Height="35"
+                Margin="25,20"
+                Click="BtnSetName_Click"
+                Content="Set Name"
+                UseLayoutRounding="True" />
+
+        <Label Name="LblTargetUser"
+               Grid.Row="0"
+               Grid.Column="0"
+               HorizontalAlignment="Center"
+               VerticalAlignment="Center"
+               Content="{Binding TargetUser.Name,
+                                 Mode=OneTime,
+                                 UpdateSourceTrigger=Default}" />
+        <xctk:WatermarkTextBox x:Name="TxtSetName"
+                               Grid.Row="0"
+                               Grid.Column="1"
+                               Width="156"
+                               Height="33"
+                               Margin="40,20"
+                               FontSize="10"
+                               FontStyle="Italic"
+                               TextDecorations="{x:Null}"
+                               TextWrapping="Wrap"
+                               UseLayoutRounding="True"
+                               Watermark="New Name..." />
+        <Button x:Name="BtnGenKeyPair"
+                Grid.Row="1"
+                Grid.Column="0"
+                Width="156"
+                Height="35"
+                Margin="25,20"
+                Click="BtnGenKeyPair_Click"
+                Content="Generate Key Pair"
+                UseLayoutRounding="True" />
+        <Label x:Name="LblCurrentName"
+               Grid.Row="1"
+               Grid.RowSpan="3"
+               Grid.Column="0"
+               Grid.ColumnSpan="3"
+               Margin="10,65"
+               HorizontalContentAlignment="Center"
+               VerticalContentAlignment="Center"
+               Content="Anonymous"
+               FontSize="24" />
+        <Button x:Name="BtnGetPubKey"
+                Grid.Row="1"
+                Grid.Column="1"
+                Width="156"
+                Height="34"
+                Margin="25,20"
+                Click="BtnGetPubKey_Click"
+                Content="Get Public Key"
+                UseLayoutRounding="True" />
+        <Button x:Name="BtnRegPubKey"
+                Grid.Row="1"
+                Grid.Column="2"
+                Width="156"
+                Height="34"
+                Margin="39,20,39,16"
+                Click="BtnRegPubKey_Click"
+                Content="Register Key"
+                UseLayoutRounding="True" />
+
+        <Rectangle Grid.Row="2"
+                   Grid.ColumnSpan="3"
+                   Width="699"
+                   Margin="5,0"
                    Fill="#FF959595"
                    UseLayoutRounding="True" />
 
 
-        <Rectangle Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
-                   Margin="5"
+        <Rectangle Grid.Row="3"
                    Grid.RowSpan="2"
-                   Width="699"
                    Grid.ColumnSpan="3"
-                   Grid.Row="3"
-                   UseLayoutRounding="True" />
-
-
-        <Rectangle Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
+                   Width="699"
                    Margin="5"
-                   Grid.RowSpan="2"
-                   Width="699"
-                   Grid.ColumnSpan="3"
+                   Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
                    UseLayoutRounding="True" />
+        <Button x:Name="BtnAddFriend"
+                Grid.Row="3"
+                Grid.Column="0"
+                Width="156"
+                Height="36"
+                Margin="25,20"
+                Click="BtnAddFriend_Click"
+                Content="Add Friend"
+                UseLayoutRounding="True" />
+        <xctk:WatermarkTextBox x:Name="TxtAlias"
+                               Grid.Row="3"
+                               Grid.Column="1"
+                               Width="156"
+                               Height="34"
+                               Margin="40,20"
+                               FontSize="10"
+                               FontStyle="Italic"
+                               TextDecorations="{x:Null}"
+                               TextWrapping="Wrap"
+                               UseLayoutRounding="True"
+                               Watermark="Friend's Alias..." />
+        <xctk:WatermarkTextBox x:Name="TxtFriendPublicKey"
+                               Grid.Row="3"
+                               Grid.Column="2"
+                               Width="156"
+                               Height="34"
+                               Margin="40,20"
+                               FontSize="10"
+                               FontStyle="Italic"
+                               TextDecorations="{x:Null}"
+                               TextWrapping="Wrap"
+                               UseLayoutRounding="True"
+                               Watermark="Friend's Public Key..." />
+        <Button x:Name="BtnStartChat"
+                Grid.Row="4"
+                Grid.Column="0"
+                Width="156"
+                Height="34"
+                Margin="25,20"
+                Click="BtnStartChat_Click"
+                Content="Start New Chat"
+                UseLayoutRounding="True" />
+        <xctk:WatermarkTextBox x:Name="TxtStartChatFriendName"
+                               Grid.Row="4"
+                               Grid.Column="1"
+                               Width="156"
+                               Height="33"
+                               Margin="40,20"
+                               FontSize="10"
+                               FontStyle="Italic"
+                               TextDecorations="{x:Null}"
+                               TextWrapping="Wrap"
+                               UseLayoutRounding="True"
+                               Watermark=" Target Friend's Alias..." />
 
 
 
         <TextBox x:Name="TxtChatPane"
                  Grid.Row="5"
+                 Grid.ColumnSpan="3"
                  Width="Auto"
+                 Height="87"
                  Margin="10"
                  HorizontalAlignment="Stretch"
-                 Grid.ColumnSpan="3"
-                 Text="{Binding ChatHistory, Mode= TwoWay, UpdateSourceTrigger=  PropertyChanged}"
-                 IsReadOnly="True"
-                 TextWrapping="WrapWithOverflow"
-                 TextChanged="TxtChatPane_TextChanged"
-                 IsVisibleChanged="TxtChatPane_IsVisibleChanged"
-                 VerticalScrollBarVisibility="Auto"
                  VerticalContentAlignment="Bottom"
+                 IsReadOnly="True"
+                 IsVisibleChanged="TxtChatPane_IsVisibleChanged"
                  Padding="0,10,0,0"
                  ScrollViewer.CanContentScroll="True"
-                 Height="87"
-                 UseLayoutRounding="True" />
+                 Text="{Binding ChatHistory,
+                                Mode=TwoWay,
+                                UpdateSourceTrigger=PropertyChanged}"
+                 TextChanged="TxtChatPane_TextChanged"
+                 TextWrapping="WrapWithOverflow"
+                 UseLayoutRounding="True"
+                 VerticalScrollBarVisibility="Auto" />
         <TextBox x:Name="TxtEntryField"
                  Grid.Row="6"
+                 Grid.Column="0"
+                 Grid.ColumnSpan="3"
                  Width="Auto"
                  Margin="10,0,10,10"
                  HorizontalAlignment="Stretch"
                  VerticalAlignment="Stretch"
-                 Text="{Binding ChatEntry, Mode=TwoWay}"
-                 KeyDown="TextBoxEntryField_OnKeyDown"
-                 Grid.ColumnSpan="3"
-                 Grid.Column="0"
                  VerticalContentAlignment="Center"
+                 KeyDown="TextBoxEntryField_OnKeyDown"
+                 Text="{Binding ChatEntry,
+                                Mode=TwoWay}"
                  UseLayoutRounding="True" />
-        <Button x:Name="BtnGenKeyPair"
-                Content="Generate Key Pair"
-                Margin="25,20"
-                Width="156"
-                Grid.Row="1"
-                Grid.Column="0"
-                Click="BtnGenKeyPair_Click"
-                Height="35"
-                UseLayoutRounding="True" />
-        <Button x:Name="BtnGetPubKey"
-                Content="Get Public Key"
-                Margin="25,20"
-                Width="156"
-                Grid.Row="1"
-                Grid.Column="1"
-                Click="BtnGetPubKey_Click"
-                Height="34"
-                UseLayoutRounding="True" />
-        <Button x:Name="BtnSetName"
-                Content="Set Name"
-                Margin="25,20"
-                Width="156"
-                Grid.Row="0"
-                Grid.Column="0"
-                Click="BtnSetName_Click"
-                Height="35"
-                UseLayoutRounding="True" />
-        <xctk:WatermarkTextBox x:Name="TxtSetName"
-                               Grid.Row="0"
-                               Height="33"
-                               Margin="40,20"
-                               TextWrapping="Wrap"
-                               Width="156"
-                               FontStyle="Italic"
-                               TextDecorations="{x:Null}"
-                               FontSize="10"
-                               Grid.Column="1"
-                               Watermark="New Name..."
-                               UseLayoutRounding="True" />
-        <Button x:Name="BtnAddFriend"
-                Content="Add Friend"
-                Margin="25,20"
-                Width="156"
-                Grid.Row="3"
-                Grid.Column="0"
-                Click="BtnAddFriend_Click"
-                Height="36"
-                UseLayoutRounding="True" />
-        <xctk:WatermarkTextBox x:Name="TxtAlias"
-                               Grid.Row="3"
-                               Height="34"
-                               Margin="40,20"
-                               TextWrapping="Wrap"
-                               Watermark="Friend's Alias..."
-                               Width="156"
-                               FontStyle="Italic"
-                               TextDecorations="{x:Null}"
-                               FontSize="10"
-                               Grid.Column="1"
-                               UseLayoutRounding="True" />
-        <xctk:WatermarkTextBox x:Name="TxtFriendPublicKey"
-                               Grid.Row="3"
-                               Grid.Column="2"
-                               Height="34"
-                               Margin="40,20"
-                               TextWrapping="Wrap"
-                               Watermark="Friend's Public Key..."
-                               Width="156"
-                               FontStyle="Italic"
-                               TextDecorations="{x:Null}"
-                               FontSize="10"
-                               UseLayoutRounding="True" />
-        <Button x:Name="BtnStartChat"
-                Content="Start New Chat"
-                Margin="25,20"
-                Width="156"
-                Grid.Row="4"
-                Grid.Column="0"
-                Click="BtnStartChat_Click"
-                Height="34"
-                UseLayoutRounding="True" />
-        <xctk:WatermarkTextBox x:Name="TxtStartChatFriendName"
-                               Grid.Row="4"
-                               Height="33"
-                               Margin="40,20"
-                               TextWrapping="Wrap"
-                               Watermark=" Target Friend's Alias..."
-                               Width="156"
-                               FontStyle="Italic"
-                               TextDecorations="{x:Null}"
-                               FontSize="10"
-                               Grid.Column="1"
-                               UseLayoutRounding="True" />
-        <Label x:Name="LblCurrentName"
-               Content="Anonymous"
-               Margin="10,65"
-               Grid.Row="1"
-               Grid.Column="0"
-               Grid.RowSpan="3"
-               HorizontalContentAlignment="Center"
-               VerticalContentAlignment="Center"
-               FontSize="24"
-               Grid.ColumnSpan="3" />
-        <Button x:Name="BtnRegPubKey"
-                Content="Register Key"
-                Margin="39,20,39,16"
-                Width="156"
-                Grid.Row="1"
-                Grid.Column="2"
-                Height="34"
-                UseLayoutRounding="True"
-                Click="BtnRegPubKey_Click" />
-
-        <Label Name="LblTargetUser"
-               Content="{Binding TargetUser.Name, Mode=OneTime, UpdateSourceTrigger=Default}"
-               Grid.Column="0"
-               Grid.Row="0"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center" />
 
 
 
