--- a/SecureIM.ChatGUI/view/SmartcardStartupWindow.xaml
+++ b/SecureIM.ChatGUI/view/SmartcardStartupWindow.xaml
@@ -2,24 +2,43 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SecureIM.ChatGUI.view"
-        mc:Ignorable="d"
-        d:DesignHeight="150" d:DesignWidth="300"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="SmartcardStartupWindow"
+        Width="300"
+        Height="150"
+        d:DesignHeight="150"
+        d:DesignWidth="300"
+        ResizeMode="CanMinimize"
         SizeToContent="WidthAndHeight"
-        Title="SmartcardStartupWindow" Height="150" Width="300" ResizeMode="CanMinimize">
+        mc:Ignorable="d">
     <Grid x:Name="grdMain">
 
         <Grid x:Name="grdLabel" Margin="0,0,0,80">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
 
-            <Label x:Name="lblChooseReader" Content="Choose Smartcard Reader" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderThickness="0" Background="Gainsboro" FontWeight="Bold" Height="41" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="294"  Grid.Column="0" Grid.Row="0" />
+            <Label x:Name="lblChooseReader"
+                   Grid.Row="0"
+                   Grid.Column="0"
+                   Width="294"
+                   Height="41"
+                   HorizontalAlignment="Right"
+                   VerticalAlignment="Bottom"
+                   HorizontalContentAlignment="Center"
+                   VerticalContentAlignment="Center"
+                   Background="Gainsboro"
+                   BorderThickness="0"
+                   Content="Choose Smartcard Reader"
+                   FontWeight="Bold" />
         </Grid>
         <Grid x:Name="grdList" Margin="0,41,0,0">
 
-            <ListBox x:Name="lstChooseReader" SelectionChanged="lstChooseReader_SelectionChanged" Grid.Column="0" Grid.Row="0"/>
+            <ListBox x:Name="lstChooseReader"
+                     Grid.Row="0"
+                     Grid.Column="0"
+                     SelectionChanged="lstChooseReader_SelectionChanged" />
         </Grid>
 
     </Grid>
