--- a/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
@@ -11,7 +11,8 @@
              d:DataContext="{d:DesignInstance tabClasses:TabChatMain}"
              d:DesignHeight="500"
              d:DesignWidth="700"
-             mc:Ignorable="d">
+             mc:Ignorable="d"
+             x:ClassModifier="internal">
     <Grid MinWidth="700"
           MinHeight="500"
           UseLayoutRounding="True">
