--- a/SecureIM.ChatGUI/UserControls/ChatWindowControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatWindowControl.xaml
@@ -10,7 +10,8 @@
              d:DataContext="{d:DesignInstance tabClasses:TabChatWindow}"
              d:DesignHeight="500"
              d:DesignWidth="700"
-             mc:Ignorable="d">
+             mc:Ignorable="d"
+             x:ClassModifier="internal">
 
     <!--    <UserControl.DataContext>-->
     <!--        <tabClasses:TabChatWindow />-->
