--- a/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
+++ b/SecureIM.ChatGUI/UserControls/ChatMainControl.xaml
@@ -1,21 +1,23 @@
-﻿<UserControl x:Class="SecureIM.ChatGUI.UserControls.ChatMainControl"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:tabClasses="clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
-             xmlns:viewModel1="clr-namespace:SecureIM.ChatGUI.ViewModel"
-             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-             MinWidth="700"
-             MinHeight="500"
-             d:DataContext="{d:DesignInstance tabClasses:TabChatMain}"
-             d:DesignHeight="500"
-             d:DesignWidth="700"
-             mc:Ignorable="d"
-             x:ClassModifier="internal">
-    <Grid MinWidth="700"
-          MinHeight="500"
-          UseLayoutRounding="True">
+﻿<UserControl
+    x:Class="SecureIM.ChatGUI.UserControls.ChatMainControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:tabClasses="clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
+    xmlns:viewModel1="clr-namespace:SecureIM.ChatGUI.ViewModel"
+    xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
+    MinWidth="700"
+    MinHeight="500"
+    d:DataContext="{d:DesignInstance tabClasses:TabChatMain}"
+    d:DesignHeight="500"
+    d:DesignWidth="700"
+    x:ClassModifier="internal"
+    mc:Ignorable="d">
+    <Grid
+        MinWidth="700"
+        MinHeight="500"
+        UseLayoutRounding="True">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="40*" />
             <ColumnDefinition Width="40*" />
@@ -32,180 +34,206 @@
         </Grid.RowDefinitions>
 
 
-        <Rectangle Grid.Row="2"
-                   Grid.ColumnSpan="3"
-                   Width="699"
-                   Margin="5,0"
-                   Fill="#FF959595"
-                   UseLayoutRounding="True" />
+        <Rectangle
+            Grid.Row="2"
+            Grid.ColumnSpan="3"
+            Width="699"
+            Margin="5,0"
+            Fill="#FF959595"
+            UseLayoutRounding="True" />
 
 
-        <Rectangle Grid.RowSpan="2"
-                   Grid.ColumnSpan="3"
-                   Width="699"
-                   Margin="5"
-                   Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
-                   UseLayoutRounding="True" />
-        <Button x:Name="BtnSetName"
-                Grid.Row="0"
-                Grid.Column="0"
-                Width="156"
-                Height="35"
-                Margin="25,20"
-                Click="BtnSetName_Click"
-                Content="Set Name"
-                UseLayoutRounding="True" />
+        <Rectangle
+            Grid.RowSpan="2"
+            Grid.ColumnSpan="3"
+            Width="699"
+            Margin="5"
+            Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
+            UseLayoutRounding="True" />
+        <Button
+            x:Name="BtnSetName"
+            Grid.Row="0"
+            Grid.Column="0"
+            Width="156"
+            Height="35"
+            Margin="25,20"
+            Click="BtnSetName_Click"
+            Content="Set Name"
+            UseLayoutRounding="True" />
 
-        <Label x:Name="LblTargetUser"
-               Grid.Row="2"
-               Grid.Column="2"
-               HorizontalAlignment="Center"
-               VerticalAlignment="Center"
-               Content="{Binding TargetUser.Name, Mode=OneTime, UpdateSourceTrigger=Default}" />
-        <xctk:WatermarkTextBox x:Name="TxtSetName"
-                               Grid.Row="0"
-                               Grid.Column="1"
-                               Width="156"
-                               Height="33"
-                               Margin="40,20"
-                               FontSize="10"
-                               FontStyle="Italic"
-                               TextDecorations="{x:Null}"
-                               TextWrapping="Wrap"
-                               UseLayoutRounding="True"
-                               Watermark="New Name..." />
-        <Button x:Name="BtnGenKeyPair"
-                Grid.Row="1"
-                Grid.Column="0"
-                Width="156"
-                Height="35"
-                Margin="25,20"
-                Click="BtnGenKeyPair_Click"
-                Content="Generate Key Pair"
-                UseLayoutRounding="True" />
-        <Label x:Name="LblCurrentName"
-               Grid.Row="1"
-               Grid.RowSpan="3"
-               Grid.Column="0"
-               Grid.ColumnSpan="3"
-               Margin="10,65"
-               HorizontalContentAlignment="Center"
-               VerticalContentAlignment="Center"
-               Content="Anonymous"
-               FontSize="24" />
-        <Button x:Name="BtnGetPubKey"
-                Grid.Row="1"
-                Grid.Column="1"
-                Width="156"
-                Height="34"
-                Margin="25,20"
-                Click="BtnGetPubKey_Click"
-                Content="Get Public Key"
-                UseLayoutRounding="True" />
-        <Button x:Name="BtnRegPubKey"
-                Grid.Row="1"
-                Grid.Column="2"
-                Width="156"
-                Height="34"
-                Margin="39,20,39,16"
-                Click="BtnRegPubKey_Click"
-                Content="Register Key"
-                UseLayoutRounding="True" />
-
-
-        <Rectangle Grid.Row="3"
-                   Grid.RowSpan="2"
-                   Grid.ColumnSpan="3"
-                   Width="699"
-                   Margin="5"
-                   Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
-                   UseLayoutRounding="True" />
-        <Button x:Name="BtnAddFriend"
-                Grid.Row="3"
-                Grid.Column="0"
-                Width="156"
-                Height="36"
-                Margin="25,20"
-                Click="BtnAddFriend_Click"
-                Content="Add Friend"
-                UseLayoutRounding="True" />
-        <xctk:WatermarkTextBox x:Name="TxtAlias"
-                               Grid.Row="3"
-                               Grid.Column="1"
-                               Width="156"
-                               Height="34"
-                               Margin="40,20"
-                               FontSize="10"
-                               FontStyle="Italic"
-                               TextDecorations="{x:Null}"
-                               TextWrapping="Wrap"
-                               UseLayoutRounding="True"
-                               Watermark="Friend's Alias..." />
-        <xctk:WatermarkTextBox x:Name="TxtFriendPublicKey"
-                               Grid.Row="3"
-                               Grid.Column="2"
-                               Width="156"
-                               Height="34"
-                               Margin="40,20"
-                               FontSize="10"
-                               FontStyle="Italic"
-                               TextDecorations="{x:Null}"
-                               TextWrapping="Wrap"
-                               UseLayoutRounding="True"
-                               Watermark="Friend's Public Key..." />
-        <Button x:Name="BtnStartChat"
-                Grid.Row="4"
-                Grid.Column="0"
-                Width="156"
-                Height="34"
-                Margin="25,20"
-                Click="BtnStartChat_Click"
-                Content="Start New Chat"
-                UseLayoutRounding="True" />
-        <xctk:WatermarkTextBox x:Name="TxtStartChatFriendName"
-                               Grid.Row="4"
-                               Grid.Column="1"
-                               Width="156"
-                               Height="33"
-                               Margin="40,20"
-                               FontSize="10"
-                               FontStyle="Italic"
-                               TextDecorations="{x:Null}"
-                               TextWrapping="Wrap"
-                               UseLayoutRounding="True"
-                               Watermark=" Target Friend's Alias..." />
+        <Label
+            x:Name="LblTargetUser"
+            Grid.Row="2"
+            Grid.Column="2"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            Content="{Binding TargetUser.Name, Mode=OneTime, UpdateSourceTrigger=Default}" />
+        <xctk:WatermarkTextBox
+            x:Name="TxtSetName"
+            Grid.Row="0"
+            Grid.Column="1"
+            Width="156"
+            Height="33"
+            Margin="40,20"
+            VerticalContentAlignment="Stretch"
+            FontSize="16"
+            FontStyle="Italic"
+            HorizontalScrollBarVisibility="Disabled"
+            ScrollViewer.CanContentScroll="True"
+            TextDecorations="{x:Null}"
+            TextWrapping="Wrap"
+            UseLayoutRounding="True"
+            Watermark="New Name..." />
+        <Button
+            x:Name="BtnGenKeyPair"
+            Grid.Row="1"
+            Grid.Column="0"
+            Width="156"
+            Height="35"
+            Margin="25,20"
+            Click="BtnGenKeyPair_Click"
+            Content="Generate Key Pair"
+            UseLayoutRounding="True" />
+        <Label
+            x:Name="LblCurrentName"
+            Grid.Row="1"
+            Grid.RowSpan="3"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            Margin="10,65"
+            HorizontalContentAlignment="Center"
+            VerticalContentAlignment="Center"
+            Content="Anonymous"
+            FontSize="24" />
+        <Button
+            x:Name="BtnGetPubKey"
+            Grid.Row="1"
+            Grid.Column="1"
+            Width="156"
+            Height="34"
+            Margin="25,20"
+            Click="BtnGetPubKey_Click"
+            Content="Get Public Key"
+            UseLayoutRounding="True" />
+        <Button
+            x:Name="BtnRegPubKey"
+            Grid.Row="1"
+            Grid.Column="2"
+            Width="156"
+            Height="34"
+            Margin="39,20,39,16"
+            Click="BtnRegPubKey_Click"
+            Content="Register Key"
+            UseLayoutRounding="True" />
 
 
+        <Rectangle
+            Grid.Row="3"
+            Grid.RowSpan="2"
+            Grid.ColumnSpan="3"
+            Width="699"
+            Margin="5"
+            Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}"
+            UseLayoutRounding="True" />
+        <Button
+            x:Name="BtnAddFriend"
+            Grid.Row="3"
+            Grid.Column="0"
+            Width="156"
+            Height="36"
+            Margin="25,20"
+            Click="BtnAddFriend_Click"
+            Content="Add Friend"
+            UseLayoutRounding="True" />
+        <xctk:WatermarkTextBox
+            x:Name="TxtAlias"
+            Grid.Row="3"
+            Grid.Column="1"
+            Width="156"
+            Height="34"
+            Margin="40,20"
+            FontSize="16"
+            FontStyle="Italic"
+            HorizontalScrollBarVisibility="Disabled"
+            ScrollViewer.CanContentScroll="True"
+            TextDecorations="{x:Null}"
+            TextWrapping="Wrap"
+            UseLayoutRounding="True"
+            Watermark="Friend's Alias..." />
+        <xctk:WatermarkTextBox
+            x:Name="TxtFriendPublicKey"
+            Grid.Row="3"
+            Grid.Column="2"
+            Width="156"
+            Height="34"
+            Margin="40,20"
+            FontSize="16"
+            FontStyle="Italic"
+            HorizontalScrollBarVisibility="Disabled"
+            ScrollViewer.CanContentScroll="True"
+            TextDecorations="{x:Null}"
+            TextWrapping="Wrap"
+            UseLayoutRounding="True"
+            Watermark="Friend's Public Key..." />
+        <Button
+            x:Name="BtnStartChat"
+            Grid.Row="4"
+            Grid.Column="0"
+            Width="156"
+            Height="34"
+            Margin="25,20"
+            Click="BtnStartChat_Click"
+            Content="Start New Chat"
+            UseLayoutRounding="True" />
+        <xctk:WatermarkTextBox
+            x:Name="TxtStartChatFriendName"
+            Grid.Row="4"
+            Grid.Column="1"
+            Width="156"
+            Height="33"
+            Margin="40,20"
+            FontSize="16"
+            FontStyle="Italic"
+            HorizontalScrollBarVisibility="Disabled"
+            ScrollViewer.CanContentScroll="True"
+            TextDecorations="{x:Null}"
+            TextWrapping="Wrap"
+            UseLayoutRounding="True"
+            Watermark="Target Friend's Alias..." />
 
-        <TextBox x:Name="TxtChatPane"
-                 Grid.Row="5"
-                 Grid.ColumnSpan="3"
-                 Width="Auto"
-                 Height="87"
-                 Margin="10"
-                 HorizontalAlignment="Stretch"
-                 VerticalContentAlignment="Bottom"
-                 IsReadOnly="True"
-                 IsVisibleChanged="TxtChatPane_IsVisibleChanged"
-                 Padding="0,10,0,0"
-                 ScrollViewer.CanContentScroll="True"
-                 Text="{Binding ChatHistory, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                 TextChanged="TxtChatPane_TextChanged"
-                 TextWrapping="WrapWithOverflow"
-                 UseLayoutRounding="True"
-                 VerticalScrollBarVisibility="Auto" />
-        <TextBox x:Name="TxtEntryField"
-                 Grid.Row="6"
-                 Grid.Column="0"
-                 Grid.ColumnSpan="3"
-                 Width="Auto"
-                 Margin="10,0,10,10"
-                 HorizontalAlignment="Stretch"
-                 VerticalAlignment="Stretch"
-                 VerticalContentAlignment="Center"
-                 KeyDown="TextBoxEntryField_OnKeyDown"
-                 Text="{Binding ChatEntry, Mode=TwoWay}"
-                 UseLayoutRounding="True" />
+
+
+        <TextBox
+            x:Name="TxtChatPane"
+            Grid.Row="5"
+            Grid.ColumnSpan="3"
+            Width="Auto"
+            Height="87"
+            Margin="10"
+            Padding="0,10,0,0"
+            HorizontalAlignment="Stretch"
+            VerticalContentAlignment="Bottom"
+            IsReadOnly="True"
+            IsVisibleChanged="TxtChatPane_IsVisibleChanged"
+            ScrollViewer.CanContentScroll="True"
+            Text="{Binding ChatHistory, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            TextChanged="TxtChatPane_TextChanged"
+            TextWrapping="WrapWithOverflow"
+            UseLayoutRounding="True"
+            VerticalScrollBarVisibility="Auto" />
+        <TextBox
+            x:Name="TxtEntryField"
+            Grid.Row="6"
+            Grid.Column="0"
+            Grid.ColumnSpan="3"
+            Width="Auto"
+            Margin="10,0,10,10"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            VerticalContentAlignment="Center"
+            KeyDown="TextBoxEntryField_OnKeyDown"
+            Text="{Binding ChatEntry, Mode=TwoWay}"
+            UseLayoutRounding="True" />
 
 
 
