--- a/SecureIM.ChatGUI/UserControls/UserControl4.xaml
+++ b/SecureIM.ChatGUI/UserControls/UserControl4.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="SecureIM.ChatGUI.UserControls.UserControl4"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:tabClasses="clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
-             d:DesignHeight="300"
-             d:DesignWidth="300"
-             mc:Ignorable="d">
+﻿<UserControl
+    x:Class="SecureIM.ChatGUI.UserControls.UserControl4"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:tabClasses="clr-namespace:SecureIM.ChatGUI.ViewModel.TabClasses"
+    d:DesignHeight="300"
+    d:DesignWidth="300"
+    mc:Ignorable="d">
     <Grid Margin="30,10" d:DataContext="{d:DesignInstance tabClasses:TabClass4}">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -15,9 +16,9 @@
         </Grid.RowDefinitions>
         <!--<StackPanel Margin="30,10">-->
         <Label Content="{Binding TabName}" FontSize="18" />
-        <CheckBox Grid.Row="1"
-                  Content="Is blinking"
-                  IsChecked="{Binding IsBlinking,
-                                      Mode=TwoWay}" />
+        <CheckBox
+            Grid.Row="1"
+            Content="Is blinking"
+            IsChecked="{Binding IsBlinking, Mode=TwoWay}" />
     </Grid>
 </UserControl>
